feat: makemore loss function, training and sampling

--- a/makemore_from_scratch_lfg.ipynb
+++ b/makemore_from_scratch_lfg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        "(np.float64(-0.5), np.float64(26.5), np.float64(26.5), np.float64(-0.5))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,16 +226,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-559951.5625\n",
-      "559951.5625\n",
-      "2.4543561935424805\n"
+      "-559938.8125\n",
+      "559938.8125\n",
+      "2.4543004035949707\n"
      ]
     }
    ],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -330,16 +330,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x118ce3440>"
+       "<matplotlib.image.AxesImage at 0x10ffeadb0>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,6 @@
     "        ys.append(ix2)\n",
     "xs = torch.tensor(xs)\n",
     "ys = torch.tensor(ys)\n",
-    "num = xs.nelement()\n",
     "print('number of examples:', num)\n",
     "\n",
     "# initialize the network\n",
@@ -529,117 +528,220 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.4625790119171143\n",
-      "2.4625325202941895\n",
-      "2.462486505508423\n",
-      "2.4624409675598145\n",
-      "2.4623959064483643\n",
-      "2.4623513221740723\n",
-      "2.4623074531555176\n",
-      "2.462263822555542\n",
-      "2.4622204303741455\n",
-      "2.4621777534484863\n",
-      "2.4621355533599854\n",
-      "2.4620938301086426\n",
-      "2.462052345275879\n",
-      "2.4620113372802734\n",
-      "2.4619710445404053\n",
-      "2.461930751800537\n",
-      "2.461890935897827\n",
-      "2.461851119995117\n",
-      "2.4618124961853027\n",
-      "2.4617741107940674\n",
-      "2.461735725402832\n",
-      "2.461697816848755\n",
-      "2.461660146713257\n",
-      "2.461623191833496\n",
-      "2.4615864753723145\n",
-      "2.461550235748291\n",
-      "2.4615139961242676\n",
-      "2.4614782333374023\n",
-      "2.4614429473876953\n",
-      "2.4614078998565674\n",
-      "2.4613733291625977\n",
-      "2.461338520050049\n",
-      "2.4613044261932373\n",
-      "2.461271286010742\n",
-      "2.461237668991089\n",
-      "2.4612042903900146\n",
-      "2.4611713886260986\n",
-      "2.4611387252807617\n",
-      "2.461107015609741\n",
-      "2.4610745906829834\n",
-      "2.461043357849121\n",
-      "2.4610118865966797\n",
-      "2.4609808921813965\n",
-      "2.4609498977661133\n",
-      "2.4609193801879883\n",
-      "2.4608888626098633\n",
-      "2.4608588218688965\n",
-      "2.460829257965088\n",
-      "2.4607994556427\n",
-      "2.4607701301574707\n",
-      "2.4607412815093994\n",
-      "2.460712432861328\n",
-      "2.460684061050415\n",
-      "2.460655689239502\n",
-      "2.460627794265747\n",
-      "2.4606001377105713\n",
-      "2.4605724811553955\n",
-      "2.460545063018799\n",
-      "2.4605178833007812\n",
-      "2.4604907035827637\n",
-      "2.4604642391204834\n",
-      "2.4604380130767822\n",
-      "2.460411548614502\n",
-      "2.460385799407959\n",
-      "2.460360050201416\n",
-      "2.460334300994873\n",
-      "2.460308790206909\n",
-      "2.4602832794189453\n",
-      "2.4602582454681396\n",
-      "2.460233449935913\n",
-      "2.4602088928222656\n",
-      "2.460184335708618\n",
-      "2.460160255432129\n",
-      "2.4601361751556396\n",
-      "2.4601125717163086\n",
-      "2.4600887298583984\n",
-      "2.4600653648376465\n",
-      "2.4600417613983154\n",
-      "2.460019111633301\n",
-      "2.459995746612549\n",
-      "2.459973096847534\n",
-      "2.4599504470825195\n",
-      "2.459927797317505\n",
-      "2.4599056243896484\n",
-      "2.459883689880371\n",
-      "2.4598617553710938\n",
-      "2.4598400592803955\n",
-      "2.4598183631896973\n",
-      "2.4597971439361572\n",
-      "2.459775686264038\n",
-      "2.459754467010498\n",
-      "2.459733247756958\n",
-      "2.4597127437591553\n",
-      "2.4596917629241943\n",
-      "2.4596710205078125\n",
-      "2.459650754928589\n",
-      "2.4596307277679443\n",
-      "2.4596107006073\n",
-      "2.459590435028076\n",
-      "2.4595706462860107\n"
+      "228146\n",
+      "3.7590503692626953\n",
+      "228146\n",
+      "3.371178150177002\n",
+      "228146\n",
+      "3.154114246368408\n",
+      "228146\n",
+      "3.020442485809326\n",
+      "228146\n",
+      "2.92777943611145\n",
+      "228146\n",
+      "2.860471487045288\n",
+      "228146\n",
+      "2.8097991943359375\n",
+      "228146\n",
+      "2.7701737880706787\n",
+      "228146\n",
+      "2.7381463050842285\n",
+      "228146\n",
+      "2.711571455001831\n",
+      "228146\n",
+      "2.689079523086548\n",
+      "228146\n",
+      "2.669766902923584\n",
+      "228146\n",
+      "2.653010368347168\n",
+      "228146\n",
+      "2.638359546661377\n",
+      "228146\n",
+      "2.6254730224609375\n",
+      "228146\n",
+      "2.61407732963562\n",
+      "228146\n",
+      "2.603952646255493\n",
+      "228146\n",
+      "2.5949132442474365\n",
+      "228146\n",
+      "2.5868051052093506\n",
+      "228146\n",
+      "2.5794992446899414\n",
+      "228146\n",
+      "2.5728862285614014\n",
+      "228146\n",
+      "2.566875696182251\n",
+      "228146\n",
+      "2.5613889694213867\n",
+      "228146\n",
+      "2.5563621520996094\n",
+      "228146\n",
+      "2.551738977432251\n",
+      "228146\n",
+      "2.5474724769592285\n",
+      "228146\n",
+      "2.5435242652893066\n",
+      "228146\n",
+      "2.5398590564727783\n",
+      "228146\n",
+      "2.5364489555358887\n",
+      "228146\n",
+      "2.533268451690674\n",
+      "228146\n",
+      "2.530296564102173\n",
+      "228146\n",
+      "2.5275139808654785\n",
+      "228146\n",
+      "2.524905204772949\n",
+      "228146\n",
+      "2.5224547386169434\n",
+      "228146\n",
+      "2.520150899887085\n",
+      "228146\n",
+      "2.51798152923584\n",
+      "228146\n",
+      "2.5159358978271484\n",
+      "228146\n",
+      "2.514004945755005\n",
+      "228146\n",
+      "2.5121800899505615\n",
+      "228146\n",
+      "2.510453462600708\n",
+      "228146\n",
+      "2.5088181495666504\n",
+      "228146\n",
+      "2.5072672367095947\n",
+      "228146\n",
+      "2.5057947635650635\n",
+      "228146\n",
+      "2.5043962001800537\n",
+      "228146\n",
+      "2.503065824508667\n",
+      "228146\n",
+      "2.501798629760742\n",
+      "228146\n",
+      "2.500591278076172\n",
+      "228146\n",
+      "2.499439001083374\n",
+      "228146\n",
+      "2.4983389377593994\n",
+      "228146\n",
+      "2.4972875118255615\n",
+      "228146\n",
+      "2.496281385421753\n",
+      "228146\n",
+      "2.4953184127807617\n",
+      "228146\n",
+      "2.4943952560424805\n",
+      "228146\n",
+      "2.4935104846954346\n",
+      "228146\n",
+      "2.4926609992980957\n",
+      "228146\n",
+      "2.491844654083252\n",
+      "228146\n",
+      "2.491060495376587\n",
+      "228146\n",
+      "2.4903056621551514\n",
+      "228146\n",
+      "2.4895787239074707\n",
+      "228146\n",
+      "2.4888789653778076\n",
+      "228146\n",
+      "2.48820424079895\n",
+      "228146\n",
+      "2.487553119659424\n",
+      "228146\n",
+      "2.486924886703491\n",
+      "228146\n",
+      "2.4863178730010986\n",
+      "228146\n",
+      "2.485731601715088\n",
+      "228146\n",
+      "2.4851644039154053\n",
+      "228146\n",
+      "2.4846158027648926\n",
+      "228146\n",
+      "2.484084367752075\n",
+      "228146\n",
+      "2.483570098876953\n",
+      "228146\n",
+      "2.4830715656280518\n",
+      "228146\n",
+      "2.482588291168213\n",
+      "228146\n",
+      "2.482119560241699\n",
+      "228146\n",
+      "2.4816653728485107\n",
+      "228146\n",
+      "2.4812235832214355\n",
+      "228146\n",
+      "2.480794906616211\n",
+      "228146\n",
+      "2.4803783893585205\n",
+      "228146\n",
+      "2.479973793029785\n",
+      "228146\n",
+      "2.4795801639556885\n",
+      "228146\n",
+      "2.4791975021362305\n",
+      "228146\n",
+      "2.478825330734253\n",
+      "228146\n",
+      "2.4784626960754395\n",
+      "228146\n",
+      "2.478109836578369\n",
+      "228146\n",
+      "2.477766275405884\n",
+      "228146\n",
+      "2.477431535720825\n",
+      "228146\n",
+      "2.4771058559417725\n",
+      "228146\n",
+      "2.47678804397583\n",
+      "228146\n",
+      "2.476478099822998\n",
+      "228146\n",
+      "2.4761757850646973\n",
+      "228146\n",
+      "2.4758808612823486\n",
+      "228146\n",
+      "2.475593328475952\n",
+      "228146\n",
+      "2.4753124713897705\n",
+      "228146\n",
+      "2.4750382900238037\n",
+      "228146\n",
+      "2.474771022796631\n",
+      "228146\n",
+      "2.4745092391967773\n",
+      "228146\n",
+      "2.4742541313171387\n",
+      "228146\n",
+      "2.4740047454833984\n",
+      "228146\n",
+      "2.4737610816955566\n",
+      "228146\n",
+      "2.473522663116455\n",
+      "228146\n",
+      "2.473289728164673\n",
+      "228146\n",
+      "2.473062038421631\n"
      ]
     }
    ],
    "source": [
+    "# number of words\n",
+    "num = xs.nelement()\n",
+    "\n",
     "# gradient descent\n",
     "for k in range(100):\n",
     "\n",
@@ -664,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +774,7 @@
      "output_type": "stream",
      "text": [
       "cexze.\n",
-      "momasurailezitynn.\n",
+      "momasurailezityha.\n",
       "konimittain.\n",
       "llayn.\n",
       "ka.\n"
@@ -709,13 +811,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "cexze.\n",
-    "momasurailezitynn.\n",
-    "konimittain.\n",
-    "llayn.\n",
-    "ka."
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
