--- a/makemore_part5_backprop.ipynb
+++ b/makemore_part5_backprop.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,17 +208,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(3.4771, grad_fn=<NegBackward0>)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Forward pass\n",
     "emb = C[Xb]\n",
@@ -252,16 +244,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(3.4771, grad_fn=<NegBackward0>)"
+       "tensor(3.3417, grad_fn=<NegBackward0>)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +282,16 @@
      "text": [
       "logprobs        | exact: True  | approximate: True  | maxdiff: 0.0\n",
       "probs           | exact: True  | approximate: True  | maxdiff: 0.0\n",
-      "counts_sum_inv  | exact: False | approximate: False | maxdiff: 0.4633450210094452\n"
+      "counts_sum_inv  | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "counts_sum      | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "counts          | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "dnorm_logits    | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "dlogit_maxes    | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "dlogits         | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "dh              | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "dW2             | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "db2             | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "dhpreact        | exact: True  | approximate: True  | maxdiff: 0.0\n"
      ]
     }
    ],
@@ -312,8 +313,56 @@
     "# dcounts_sum_inv\n",
     "# remember: counts_sum_inv was replicated, and this is the derivative with respect\n",
     "# to the replicated vectors\n",
-    "dcounts_sum_inv = counts * dprobs\n",
-    "cmp('counts_sum_inv', dcounts_sum_inv, counts_sum_inv)"
+    "# counts * drops is deriv in relation to replicated counts_sum_inv\n",
+    "dcounts_sum_inv = (counts * dprobs).sum(1, keepdim=True) # keep dim of counts_sum_inv\n",
+    "cmp('counts_sum_inv', dcounts_sum_inv, counts_sum_inv)\n",
+    "\n",
+    "# dcounts\n",
+    "dcounts = counts_sum_inv * dprobs\n",
+    "\n",
+    "# dcounts_sum\n",
+    "dcounts_sum = (-counts_sum**-2) * dcounts_sum_inv\n",
+    "cmp('counts_sum', dcounts_sum, counts_sum)\n",
+    "\n",
+    "# dcounts\n",
+    "dcounts += torch.ones_like(counts) * dcounts_sum # broadcasting\n",
+    "cmp('counts', dcounts, counts)\n",
+    "\n",
+    "# dnorm_logits\n",
+    "dnorm_logits = (counts) * dcounts # counts = norm_logits.exp()\n",
+    "cmp('dnorm_logits', dnorm_logits, norm_logits)\n",
+    "\n",
+    "# dlogits\n",
+    "dlogits = dnorm_logits.clone() # counts = norm_logits.exp()\n",
+    "\n",
+    "# dlogit_maxes\n",
+    "dlogit_maxes = (-dnorm_logits).sum(1, keepdim=True)  # counts = norm_logits.exp()\n",
+    "cmp('dlogit_maxes', dlogit_maxes, logit_maxes)\n",
+    "\n",
+    "# dlogits\n",
+    "dlogits += F.one_hot(logits.max(1).indices, num_classes=logits.shape[1]) * dlogit_maxes\n",
+    "cmp('dlogits', dlogits, logits)\n",
+    "\n",
+    "# dh\n",
+    "# shape of dh must be same as shape of h (from matmul)\n",
+    "dh = dlogits @ W2.T\n",
+    "cmp('dh', dh, h)\n",
+    "\n",
+    "# dW2\n",
+    "dW2 = h.T @ dlogits\n",
+    "cmp('dW2', dW2, W2)\n",
+    "\n",
+    "# db2\n",
+    "db2 = dlogits.sum(0)\n",
+    "cmp('db2', db2, b2)\n",
+    "\n",
+    "# dhpreact\n",
+    "dhpreact = (1 - h**2) * dh\n",
+    "cmp('dhpreact', dhpreact, hpreact)\n",
+    "\n",
+    "# dhpreact\n",
+    "dhpreact = (1 - h**2) * dh\n",
+    "cmp('dhpreact', dhpreact, hpreact)"
    ]
   },
   {
