feat: added dbngain

--- a/makemore_part5_backprop.ipynb
+++ b/makemore_part5_backprop.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,16 +244,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(3.3417, grad_fn=<NegBackward0>)"
+       "tensor(3.3226, grad_fn=<NegBackward0>)"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,10 @@
       "dh              | exact: True  | approximate: True  | maxdiff: 0.0\n",
       "dW2             | exact: True  | approximate: True  | maxdiff: 0.0\n",
       "db2             | exact: True  | approximate: True  | maxdiff: 0.0\n",
-      "dhpreact        | exact: True  | approximate: True  | maxdiff: 0.0\n"
+      "dhpreact        | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "dhpreact        | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "dbngain         | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "torch.Size([1, 64]) torch.Size([32, 64]) torch.Size([1, 64]) torch.Size([32, 64])\n"
      ]
     }
    ],
@@ -313,7 +316,7 @@
     "# dcounts_sum_inv\n",
     "# remember: counts_sum_inv was replicated, and this is the derivative with respect\n",
     "# to the replicated vectors\n",
-    "# counts * drops is deriv in relation to replicated counts_sum_inv\n",
+    "# counts * dprobs is deriv in relation to replicated counts_sum_inv\n",
     "dcounts_sum_inv = (counts * dprobs).sum(1, keepdim=True) # keep dim of counts_sum_inv\n",
     "cmp('counts_sum_inv', dcounts_sum_inv, counts_sum_inv)\n",
     "\n",
@@ -362,7 +365,18 @@
     "\n",
     "# dhpreact\n",
     "dhpreact = (1 - h**2) * dh\n",
-    "cmp('dhpreact', dhpreact, hpreact)"
+    "cmp('dhpreact', dhpreact, hpreact)\n",
+    "\n",
+    "# dbngain\n",
+    "dbngain = (bnraw * dhpreact).sum(0, keepdim=True) # dbngain and bngain have equal dimensions [1, 64]\n",
+    "# bngain [1, 64]\n",
+    "# bnraw [32, 64]\n",
+    "# dhpreact [32, 64]\n",
+    "# bngain * bnraw is element-wise\n",
+    "# bngain is replicated across rows\n",
+    "# to account for that, we sum across dimension 0 (rows)\n",
+    "# similar to docunts_sum_inv\n",
+    "cmp('dbngain', dbngain, bngain)"
    ]
   },
   {
