--- a/makemore_part5_backprop.ipynb
+++ b/makemore_part5_backprop.ipynb
@@ -222,7 +222,7 @@
     "bnmeani = 1 / n * hprebn.sum(0, keepdim=True)\n",
     "bndiff = hprebn - bnmeani # deviation from mean, matrix\n",
     "bndiff2 = bndiff ** 2\n",
-    "bnvar = 1 / (n - 1) * (bndiff2).sum(0, keepdim=True)\n",
+    "bnvar = 1 / (n - 1) * (bndiff2).sum(0, keepdim=True) # n-1: Bessel's correction, unbiased\n",
     "bnvar_inv = (bnvar + 1e-5) ** -0.5\n",
     "bnraw = bndiff * bnvar_inv\n",
     "hpreact = bngain * bnraw + bnbias\n",
@@ -250,7 +250,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor(3.3226, grad_fn=<NegBackward0>)"
+       "tensor(3.3307, grad_fn=<NegBackward0>)"
       ]
      },
      "execution_count": 16,
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,18 @@
       "dhpreact        | exact: True  | approximate: True  | maxdiff: 0.0\n",
       "dhpreact        | exact: True  | approximate: True  | maxdiff: 0.0\n",
       "dbngain         | exact: True  | approximate: True  | maxdiff: 0.0\n",
-      "torch.Size([1, 64]) torch.Size([32, 64]) torch.Size([1, 64]) torch.Size([32, 64])\n"
+      "dbnraw          | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "dbnbias         | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "dbnvar          | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "dbndiff2        | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "dbndiff         | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "dbnmeani        | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "dhprebn         | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "dembcat         | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "dW1             | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "db1             | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "demb            | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "dC              | exact: True  | approximate: True  | maxdiff: 0.0\n"
      ]
     }
    ],
@@ -367,6 +378,7 @@
     "dhpreact = (1 - h**2) * dh\n",
     "cmp('dhpreact', dhpreact, hpreact)\n",
     "\n",
+    "# dbngain, dbnraw and dbnbias can be deduced using dimensions\n",
     "# dbngain\n",
     "dbngain = (bnraw * dhpreact).sum(0, keepdim=True) # dbngain and bngain have equal dimensions [1, 64]\n",
     "# bngain [1, 64]\n",
@@ -376,7 +388,74 @@
     "# bngain is replicated across rows\n",
     "# to account for that, we sum across dimension 0 (rows)\n",
     "# similar to docunts_sum_inv\n",
-    "cmp('dbngain', dbngain, bngain)"
+    "cmp('dbngain', dbngain, bngain)\n",
+    "\n",
+    "# dbnraw\n",
+    "dbnraw = bngain * dhpreact\n",
+    "cmp('dbnraw', dbnraw, bnraw)\n",
+    "\n",
+    "# dbnbias\n",
+    "dbnbias = dhpreact.sum(0, keepdim=True)\n",
+    "cmp('dbnbias', dbnbias, bnbias)\n",
+    "\n",
+    "# dbndiff\n",
+    "dbndiff = bnvar_inv * dbnraw\n",
+    "\n",
+    "# dbnvar_inv\n",
+    "dbnvar_inv = (bndiff * dbnraw).sum(0, keepdim=True)\n",
+    "\n",
+    "# dbnvar\n",
+    "dbnvar = -0.5*(bnvar + 1e-5)**-1.5 * dbnvar_inv\n",
+    "cmp('dbnvar', dbnvar, bnvar)\n",
+    "\n",
+    "# dbndiff2\n",
+    "# a11 a12\n",
+    "# a21 a22\n",
+    "# ----->\n",
+    "# b1  b2, where:\n",
+    "# b1 = 1 / (n-1) * (a11 + a21)\n",
+    "# b2 = 1 / (n-1) * (a21 + a22)\n",
+    "dbndiff2 = (1.0/(n-1)) * torch.ones_like(bndiff2) * dbnvar\n",
+    "cmp('dbndiff2', dbndiff2, bndiff2)\n",
+    "\n",
+    "# dbndiff\n",
+    "dbndiff += (2 * bndiff) * dbndiff2\n",
+    "cmp('dbndiff', dbndiff, bndiff)\n",
+    "\n",
+    "# dhprebn\n",
+    "dhprebn = dbndiff.clone()\n",
+    "\n",
+    "# dbnmeani\n",
+    "dbnmeani = (-dbndiff).sum(0)\n",
+    "cmp('dbnmeani', dbnmeani, bnmeani)\n",
+    "\n",
+    "# dhprebn\n",
+    "dhprebn += 1.0 / n * (torch.ones_like(hprebn) * dbnmeani)\n",
+    "cmp('dhprebn', dhprebn, hprebn)\n",
+    "\n",
+    "# dembcat\n",
+    "dembcat = dhprebn @ W1.T\n",
+    "cmp('dembcat', dembcat, embcat)\n",
+    "\n",
+    "# dW1\n",
+    "dW1 = embcat.T @ dhprebn\n",
+    "cmp('dW1', dW1, W1)\n",
+    "\n",
+    "# db1\n",
+    "db1 = dhprebn.sum(0)\n",
+    "cmp('db1', db1, b1)\n",
+    "\n",
+    "# demb\n",
+    "demb = dembcat.view(emb.shape)\n",
+    "cmp('demb', demb, emb)\n",
+    "\n",
+    "# dC\n",
+    "dC = torch.zeros_like(C) # [27, 10]\n",
+    "for k in range(Xb.shape[0]):\n",
+    "    for j in range(Xb.shape[1]):\n",
+    "        ix = Xb[k, j]\n",
+    "        dC[ix] += demb[k, j]\n",
+    "cmp('dC', dC, C)"
    ]
   },
   {
@@ -384,7 +463,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# sum in forward pass: replication/broadcasting in backward pass\n",
+    "# replication/broadcast in forward pass: sum in backward pass"
+   ]
   }
  ],
  "metadata": {
